added timeline.xml with color

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,6 +31,7 @@
         <item >1800</item>
         <item >3600</item>
     </string-array>
+        <string name="timeline">Timeline</string>
     
     
 </resources>
