--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,17 +19,23 @@
     <string name="delay_summary">How frequently to check for updates</string>
     <string name="dalay">Delay</string>
     <string-array name="delayNames">
-        <item >Every minute</item>
-        <item >Every five minutes</item>
+        <item >30 seconds</item>
+        <item >fifteen minute</item>
         <item >Every half hour</item>
         <item >Every hour</item>
+        <item >Every half day</item>
+        <item >Once a day</item>
+        <item >Never</item>
     </string-array>
 
     <string-array name="delayValues">
-        <item >60</item>
-        <item >300</item>
-        <item >1800</item>
-        <item >3600</item>
+        <item >30000</item>
+        <item >900000</item>
+        <item >1900000</item>
+        <item >3600000</item>
+        <item >43200000</item>
+        <item >86400000</item>
+        <item >0</item>
     </string-array>
         <string name="timeline">Timeline</string>
   
